src1/server/docker/k8s/35-gitlab/10_gitLab.yaml
## gitlab + docker-registry
## Т.к. gitlab требует доступ в недра /var/lib/docker-registry, контейнеры живут в
## одном pod'е.
## 
##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      nodeSelector:
        io.suggest.gitlab.here: "true"
      containers:
      ## gitlab web
      - name: gitlab-cont
        image: docker-registry.suggest.io:5000/sio/gitlab:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 22
        volumeMounts:
        - mountPath: /var/lib/gitlab
          name: var-lib-gitlab
        - mountPath: /var/lib/redis
          name: var-lib-redis
        - mountPath: /var/lib/docker-registry
          name: var-lib-docker-registry
        - name: docker-registry-creds
          mountPath: /etc/docker-registry/registry.key
          subPath: registry.key
          readOnly: true
      - name: docker-registry-cont
        image: docker-registry.suggest.io:5000/sio/docker-registry
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: var-lib-docker-registry
          mountPath: /var/lib/docker-registry
        - name: docker-registry-creds
          mountPath: /etc/docker-registry/registry.crt
          subPath: registry.crt
          readOnly: true
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: var-lib-redis
        hostPath:
          path: /var/lib/containers/gitlab/redis
          type: DirectoryOrCreate
      - name: var-lib-gitlab
        hostPath:
          path: /var/lib/containers/gitlab/gitlab
          type: DirectoryOrCreate
      - name: var-lib-docker-registry
        hostPath:
          path: /var/lib/containers/docker-registry
          type: DirectoryOrCreate
      - name: docker-registry-creds
        secret:
          secretName: docker-registry-creds
