src1/server/docker/k8s/35-gitlab/20_gitLabSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
  - name: webui
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: 22
  - name: workhorse
    protocol: TCP
    port: 8282
    targetPort: 8282
  - name: docker-registry
    protocol: TCP
    port: 5000
    targetPort: 5000
