src1/server/docker/k8s/35-gitlab/10-gitLab.yaml
## gitlab + docker-registry
## Т.к. gitlab требует доступ в недра /var/lib/docker-registry, контейнеры живут в
## одном pod'е.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      nodeSelector:
        io.suggest.gitlab.here: "true"
      containers:
      ## gitlab web
      - name: gitlab-cont
        image: docker-registry.suggest.io:5000/sio/sio2/gitlab:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 22
        volumeMounts:
        - mountPath: /var/lib/gitlab
          name: var-lib-gitlab
        - mountPath: /var/lib/redis
          name: var-lib-redis
        - mountPath: /var/lib/docker-registry
          name: var-lib-docker-registry
          readOnly: true
        - mountPath: /etc/docker-registry/registry.key
          name: docker-registry-key
          readOnly: true
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: var-lib-redis
        hostPath:
          path: /var/lib/containers/gitlab/redis
          type: DirectoryOrCreate
      - name: var-lib-gitlab
        hostPath:
          path: /var/lib/containers/gitlab/gitlab
          type: DirectoryOrCreate
      - name: var-lib-docker-registry
        hostPath:
          path: /var/lib/docker-registry
          type: Directory
      - name: docker-registry-key
        hostPath:
          path: /etc/docker-registry/registry.key
          type: File

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
  - name: webui
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: 22
  - name: workhorse
    protocol: TCP
    port: 8282
    targetPort: 8282
---
## Ингрес для проброса gitlab-а.
## Костыли с 8282 связаны с необходимостью доступа из runner'а, а доп.HTTP-хидеры внезапно оказались не нужны.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitlab
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 192.168.0.0/16, 172.16.0.0/16"
spec:
  rules:
  - host: source.suggest.io
    http:
      paths:
      - path: /sio/sio2.git
        pathType: Prefix
        #'[-/\w.]+\.git/'
        backend:
          service:
            name: gitlab-svc
            port:
              name: workhorse
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-svc
            port:
              name: webui
---
