src1/server/docker/k8s/35-gitlab/15-artifactory.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory
  labels:
    app: artifactory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
  template:
    metadata:
      labels:
        app: artifactory
    spec:
      nodeSelector:
        io.suggest.gitlab.here: "true"
      containers:
      - name: artifactory
        image: docker-registry.suggest.io:5000/sio/sio2/artifactory:latest
        imagePullPolicy: Always
        ports:
        - name: router
          containerPort: 8082
        - name: api
          containerPort: 8081
        volumeMounts:
        - name: a-var
          mountPath: /opt/jfrog/artifactory/var
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: a-var
        hostPath:
          path: /var/lib/containers/artifactory
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory
spec:
  type: ClusterIP
  selector:
    app: artifactory
  ports:
  - name: api
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: router
    protocol: TCP
    port: 8082
    targetPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-artifactory
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 192.168.0.0/16, 172.16.0.0/16"
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/proxy-read-timeout: "2400"
    ingress.kubernetes.io/proxy-send-timeout: "2400"
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/server-alias: ci.suggest.io *.ci.suggest.io
    nginx.ingress.kubernetes.io/proxy-cookie-path: "~*^/.* /"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_x_forwarded_proto = '') {
        set $http_x_forwarded_proto  $scheme;
      }
      rewrite ^/$ /ui/ redirect;
      rewrite ^/ui$ /ui/ redirect;
      #proxy_buffer_size          128k;
      #proxy_buffers              4 256k;
      #proxy_busy_buffers_size    256k;
      chunked_transfer_encoding on;
      #client_max_body_size 0;
      ## docker subrepos:
      #if ($host ~ "^(?<repo>.+).ci.suggest.io") {
      #  set $repo $1;
      #}
      #rewrite ^/(v1|v2)/(.*) /artifactory/api/docker/$repo/v2/$1 break;
      #location / {
      #proxy_read_timeout  2400s;
      proxy_pass_header   Server;
      #proxy_cookie_path   ~*^/.* /; ## annotated
      #proxy_pass          http://artifactory.default.svc.cluster.local:8082;
      proxy_set_header    X-JFrog-Override-Base-Url $http_x_forwarded_proto://$host:$server_port;
      #proxy_set_header    X-Forwarded-Port  $server_port;
      #proxy_set_header    X-Forwarded-Proto $http_x_forwarded_proto;
      #proxy_set_header    Host              $http_host;
      #proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
      #  location ~ ^/artifactory/ {
      #      proxy_pass    http://artifactory.default.svc.cluster.local:8081;
      #  }
      #}
spec:
  rules:
  ## TODO ci -> ???
  - host: ci.suggest.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory
            port:
              name: router
---
