src1/server/docker/k8s/35-gitlab/30_ingress-default.yaml
## Ингрес для проброса http-портов.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: docker-registry.suggest.io
    http:
      paths:
      - backend:
          serviceName: registry-svc
          servicePort: 5000
  - host: ci.suggest.io
    http:
      paths:
      - backend:
          serviceName: jenkins-svc
          servicePort: 8080
