src1/server/docker/k8s/35-gitlab/30_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: docker-registry.suggest.io
    http:
      paths:
      - backend:
          serviceName: registry-svc
          servicePort: 5000
  - host: ci.suggest.io
    http:
      paths:
      - backend:
          serviceName: jenkins-svc
          servicePort: 8080
  - host: source.suggest.io
    http:
      paths:
      - backend:
          serviceName: gitlab-svc
          servicePort: 8080
