src1/server/docker/k8s/35-gitlab/31_ingress-gitlab.yaml
## Ингрес для проброса gitlab-а.
## Костыли с 8282 связаны с необходимостью доступа из runner'а, а доп.HTTP-хидеры внезапно оказались не нужны.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-gitlab
  #annotations:
    #nginx.ingress.kubernetes.io/configuration-snippet: |
spec:
  rules:
  - host: source.suggest.io
    http:
      paths:
      - path: /suggestio/sio2.git
        #'[-/\w.]+\.git/'
        backend:
          serviceName: gitlab-svc
          servicePort: workhorse
      - backend:
          serviceName: gitlab-svc
          servicePort: webui
  - host: docker-registry.suggest.io
    http:
      paths:
      - backend:
          serviceName: gitlab-svc
          servicePort: docker-registry
